# D-MoSeg

./: .gitignore  .gitkeep  README.md  arg_parser.py  bg_dataset.py  cdn.py  config.json  data_io.py  fdn.py  generate_fg_data.py  generate_fg_data_1.py  generate_fg_data_2.py  generate_fg_data_3.py  generate_fg_data_4.py  generate_fg_data_5.py  generate_fg_data_6.py  likelihood_loss_function.py  params.py  prepare_fg_data.py  train-ddp-check.py  train-dp.py  train.py  train_bg_cdn.py  train_bg_cdn_ddp.py  train_cdn.py  train_fg_fdn.py
data/: link.txt
libtorch/eval_model_full-cdnet/: CMakeLists.txt  _compilation-command.txt  custom_dataset.h  run.sh
libtorch/eval_model_full-cdnet/pretrained/batch2/: 16proc_batch2_thres0.00025.pt  16proc_batch2_thres0.00075.pt  16proc_batch2_thres0.0025.pt  16proc_batch2_thres0.0075.pt  16proc_batch2_thres0.01.pt  16proc_batch2_thres0.075.pt  2proc_batch2_thres0.0.pt  2proc_batch2_thres0.0001.pt  2proc_batch2_thres0.00025.pt  2proc_batch2_thres0.0005.pt  2proc_batch2_thres0.00075.pt  4proc_batch2_thres0.0001.pt  4proc_batch2_thres0.0005.pt  4proc_batch2_thres0.0025.pt  4proc_batch2_thres0.0075.pt  4proc_batch2_thres0.01.pt  4proc_batch2_thres0.05.pt  4proc_batch2_thres0.075.pt  8proc_batch2_thres0.0001.pt  8proc_batch2_thres0.00025.pt  8proc_batch2_thres0.0005.pt  8proc_batch2_thres0.001.pt  8proc_batch2_thres0.0075.pt  8proc_batch2_thres0.025.pt  8proc_batch2_thres0.05.pt  8proc_batch2_thres0.075.pt
libtorch/eval_model_full-cdnet/pretrained/batch4/: 16proc_batch4_thres0.00025.pt  16proc_batch4_thres0.005.pt  16proc_batch4_thres0.1.pt  (+18 more)
(+193 files in other folders)
